// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders correctly with 1`] = `
<button
  aria-disabled={false}
  className="class-name monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with active 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--color-primary-active monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "background": "var(--primary-selected-color)",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with aria label 1`] = `
<span
  className="referenceWrapper"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button
    aria-disabled={false}
    aria-label="My aria label"
    className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
    data-testid="icon-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": "40px",
        "justifyContent": "center",
        "padding": 0,
        "width": "40px",
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon_component icon-button-padding icon_component--no-focus-style"
      fill="currentColor"
      height="24"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="24"
    >
      <path
        clipRule="evenodd"
        d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </button>
</span>
`;

exports[`IconButton renders correctly with disabled 1`] = `
<button
  aria-disabled={true}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding monday-style-button--disabled"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with empty props 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with id 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button_icon-button"
  id="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with size - large 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "48px",
      "justifyContent": "center",
      "padding": 0,
      "width": "48px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with size - medium 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "40px",
      "justifyContent": "center",
      "padding": 0,
      "width": "40px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with size - small 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "32px",
      "justifyContent": "center",
      "padding": 0,
      "width": "32px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="24"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="24"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with size - xs 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "24px",
      "justifyContent": "center",
      "padding": 0,
      "width": "24px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="16"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="16"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`IconButton renders correctly with size - xxs 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--no-side-padding"
  data-testid="icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": "16px",
      "justifyContent": "center",
      "padding": 0,
      "width": "16px",
    }
  }
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon_component icon-button-padding icon_component--no-focus-style"
    fill="currentColor"
    height="16"
    onClick={[Function]}
    viewBox="0 0 20 20"
    width="16"
  >
    <path
      clipRule="evenodd"
      d="M10.75 6C10.75 5.58579 10.4142 5.25 10 5.25C9.58579 5.25 9.25 5.58579 9.25 6V9.25H6C5.58579 9.25 5.25 9.58579 5.25 10C5.25 10.4142 5.58579 10.75 6 10.75H9.25V14C9.25 14.4142 9.58579 14.75 10 14.75C10.4142 14.75 10.75 14.4142 10.75 14V10.75H14C14.4142 10.75 14.75 10.4142 14.75 10C14.75 9.58579 14.4142 9.25 14 9.25H10.75V6Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;
